--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -21,6 +21,7 @@
   issn = {1365-2664},
   doi = {10.1111/j.1365-2664.2007.01416.x},
   abstract = {1 In many places in Europe, trees are currently far below their theoretical altitudinal limit because of past land use. However, under the current crisis affecting mountain agriculture, trees are likely to recolonize the subalpine belt. Addressing the societal issues associated with such landscape change requires predictive tools to assess vegetation dynamics in relation to management strategies. This study aims to analyse the factors determining tree dynamics at the subalpine ecotone and to evaluate the impact of land-use change on landscape vegetation patterns. 2 We developed a hierarchical scaling approach and applied it to a European larch (Larix decidua Mill.) colonization in the French Alps. Our landscape case study focused on subalpine south-facing grasslands of Villar d'Ar\^ene (France). First, we used a habitat-suitability model to delineate the climatic suitability habitats of larch in the French Alps. Then we used a landscape model (LaMoS) to determine whether larch is able to colonize these grasslands predicted to be climatically suitable, considering land use and local vegetation. The sensitivity of landscape colonization patterns to land-use scenarios (abandonment, delayed mowing or traditional mowing) and biological attributes of larch were analysed with a factorial simulation experiment. 3 The accuracy of the habitat-suitability model at the French Alps scale allowed for the prediction that the grasslands of Villar d'Ar\^ene were highly suitable for larch. 4 Simulations highlighted the effect of land use on larch establishment at the local but not at the landscape scale. On the other hand, larch attributes such as dispersal capacity, juvenile tolerance to light interaction (competition and facilitation) and its capacity to survive on infertile soil were shown as essential for tree spatial dynamics. 5 Synthesis and applications. Combining a habitat-suitability model with a spatially and temporally explicit landscape model enhances the capacity to account for environmental factors acting at different overlapping scales. This modelling strategy increases the robustness and accuracy of predictions, a prerequisite for landscape management in a global change context. We conclude that ongoing and future agri-environmental policies have to be quickly adapted to protect biodiversity and ecosystem services provided by subalpine grasslands.},
+  annotation = {\_eprint: https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2664.2007.01416.x},
   copyright = {\textcopyright{} 2007 The Authors. Journal compilation \textcopyright{} 2007 British Ecological Society},
   file = {/home/julien/Documents/ZoteroLibrary/Albert et al_2008_Land-use change and subalpine tree dynamics.pdf},
   journal = {Journal of Applied Ecology},
@@ -120,16 +121,6 @@
   keywords = {dispersal,invasion,landscape}
 }
 
-@phdthesis{berstadEndringarEitVestnorsk2014,
-  title = {Endringar i Eit Vestnorsk Kystlandskap Som F\o lgje Av Planting Og Naturleg Forynging Av Sitkagran ({{Picea}} Sitchensis): {{Ein}} Landskaps\o kologisk Og Metodisk Studie},
-  author = {Berstad, {\AA}se-Birgitte and Auestad, Inger and Rydgren, Knut},
-  year = {2014},
-  volume = {Master in},
-  file = {/home/julien/Documents/ZoteroLibrary/Berstad et al_2014_Endringar i eit vestnorsk kystlandskap som følgje av planting og naturleg.pdf},
-  keywords = {management,remote sensing,sitka spruce},
-  school = {H\o gskulen i Sogn og Fjordane}
-}
-
 @article{bianchiMethodsPredictingSitka2019,
   title = {Methods for Predicting {{Sitka}} Spruce Natural Regeneration Presence and Density in the {{UK}}},
   author = {Bianchi, S. and Hale, S. and Gibbons, J.},
@@ -141,7 +132,7 @@
   doi = {10.3832/ifor2888-012},
   abstract = {iForest - Biogeosciences and Forestry, vol. 12, pp. 279-288 (2019)},
   copyright = {(c) SISEF 2019 - The Italian Society of Silviculture and Forest Ecology},
-  file = {/run/user/1000/gvfs/google-drive\:host=gmail.com,user=julienvollering/1VTVV54BADyZbrPUZLFwcC51bltOMBaHb/Bianchi et al_2019_Methods for predicting Sitka spruce natural regeneration presence and density.pdf},
+  file = {/home/julien/Documents/ZoteroLibrary/Bianchi et al_2019_Methods for predicting Sitka spruce natural regeneration presence and density.pdf},
   journal = {iForest - Biogeosciences and Forestry},
   keywords = {sitka spruce},
   language = {en},
@@ -259,6 +250,7 @@
   issn = {1461-0248},
   doi = {10.1111/j.1461-0248.2007.01067.x},
   abstract = {We aim to develop a simple model to explore how disturbance and propagule pressure determine conditions for successful invasion in systems where recruitment occurs only in disturbed sites. Disturbance is often thought to favour invaders as it allows recruitment; however, the effects of disturbance are more complicated when it results in mortality of the invader. When disturbance rates in both invader occupied and unoccupied sites are the same, recruitment and mortality effects are exactly balanced, and successful invasion is independent of the disturbance regime. Differences in the disturbance rates between invader occupied and unoccupied sites can occur through invader modification or management of disturbance. Under these conditions, we found a novel mechanism for the generation of an Allee effect, which occurs when the invader promotes disturbance in sites it already occupies. When Allee effects occur one-off, large-scale disturbances can result in permanent, dramatic shifts in invader abundance; and conversely, reducing the population below a critical threshold can cause extinction.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1461-0248.2007.01067.x},
   file = {/home/julien/Documents/ZoteroLibrary/Buckley et al_2007_Disturbance, invasion and re-invasion.pdf},
   journal = {Ecology Letters},
   keywords = {Allee,disturbance,invasion,propagule pressure,recruitment},
@@ -446,6 +438,7 @@
   issn = {1365-2664},
   doi = {10.1111/j.1365-2664.2007.01398.x},
   abstract = {1 Although invasions by alien plants are major threats to the biodiversity of natural habitats, individual habitats vary considerably in their susceptibility to invasion. Therefore the risk assessment procedures, which are used increasingly by environmental managers to inform effective planning of invasive plant control, require reliable quantitative information on the extent to which different habitats are susceptible to invasion. It is also important to know whether the levels of invasion in different habitats are locally specific or consistent among regions with contrasting climate, flora and history of human impact. 2 We compiled a database of 52 480 vegetation plots from three regions of Europe: Catalonia (Mediterranean\textendash submediterranean region), Czech Republic (subcontinental) and Great Britain (oceanic). We classified plant species into neophytes, archaeophytes and natives, and calculated the proportion of each group in 33 habitats described by the European Nature Information System (EUNIS) classification. 3 Of 545 alien species found in the plots, only eight occurred in all three regions. Despite this large difference in species composition, patterns of habitat invasions were highly consistent between regions. None or few aliens were found in environmentally extreme and nutrient-poor habitats, e.g. mires, heathlands and high-mountain grasslands. Many aliens were found in frequently disturbed habitats with fluctuating nutrient availability, e.g. in man-made habitats. Neophytes were also often found in coastal, littoral and riverine habitats. 4 Neophytes were found commonly in habitats also occupied by archaeophytes. Thus, the number of archaeophytes can be considered as a good predictor of the neophyte invasion risk. However, neophytes had stronger affinity to wet habitats and disturbed woody vegetation while archaeophytes tended to be more common in dry to mesic open habitats. 5 Synthesis and applications. The considerable inter-regional consistency of the habitat invasion patterns suggests that habitats can be used as a good predictor for the invasion risk assessment. This finding opens promising perspectives for the use of spatially explicit information on habitats, including scenarios of future land-use change, to identify the areas of highest risk of invasion.},
+  annotation = {\_eprint: https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2664.2007.01398.x},
   copyright = {\textcopyright{} 2007 The Authors. Journal compilation \textcopyright{} 2008 British Ecological Society},
   file = {/home/julien/Documents/ZoteroLibrary/Chytrý et al_2008_Habitat invasions by alien plants.pdf;/home/julien/Documents/ZoteroLibrary/jpe_1398_sm_appendixs1-s4.pdf},
   journal = {Journal of Applied Ecology},
@@ -463,6 +456,7 @@
   issn = {1939-9170},
   doi = {10.1890/07-0682.1},
   abstract = {Habitats vary considerably in the level of invasion (number or proportion of alien plant species they contain), which depends on local habitat properties, propagule pressure, and climate. To determine the invasibility (susceptibility to invasions) of different habitats, it is necessary to factor out the effects of any confounding variables such as propagule pressure and climate on the level of invasion. We used 20 468 vegetation plots from 32 habitats in the Czech Republic to compare the invasibility of different habitats. Using regression trees, the proportion of alien plants, including archaeophytes (prehistoric to medieval invaders) and neophytes (recent invaders), was related to variables representing habitat properties, propagule pressure, and climate. The propagule pressure was expressed as the proportion of surrounding urban and industrial or agricultural land, human population density, distance from a river, and history of human colonization in the region. Urban and industrial land use had a positive effect on the proportion of both archaeophytes and neophytes. Agricultural land use, higher population density, and longer history of human impact positively affected the proportion of archaeophytes. Disturbed human-made habitats with herbaceous vegetation were most invaded by both groups of aliens. Neophytes were also relatively common in disturbed woody vegetation, such as broad-leaved plantations, forest clearings, and riverine scrub. These habitats also had the highest proportion of aliens after removing the effect of propagule pressure and climate, indicating that they are not only the most invaded, but also most invasible. These habitats experience recurrent disturbances and are rich, at least temporarily, in available nutrients, which supports the hypothesis that fluctuating resources are the major cause of habitat invasibility. The least invaded habitats were mires and alpine-subalpine grasslands and scrub. After removing the effect of propagule pressure and climate, some habitats actually invaded at an intermediate level had very low proportions of aliens. This indicates that these habitats (e.g., dry, wet, and saline grasslands, base-rich fens, and broad-leaved deciduous woodlands) are resistant to invasion.},
+  annotation = {\_eprint: https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.1890/07-0682.1},
   copyright = {\textcopyright{} 2008 by the Ecological Society of America},
   file = {/home/julien/Documents/ZoteroLibrary/Chytrý et al_2008_Separating Habitat Invasibility by Alien Plants from the Actual Level of.pdf},
   journal = {Ecology},
@@ -614,16 +608,6 @@
   keywords = {invasion,management}
 }
 
-@phdthesis{gjengedalLandskapsendringerSomFolge2012,
-  title = {Landskapsendringer Som F\o lge Av Planting Og Spredning Av Sitkagran: {{En}} Landskaps\o kologisk Studie Av Tre Omr\aa der i {{Ausrheim}} Og {{Rad\o y}} Kommuner 2012},
-  author = {Gjengedal, Magnhild and Robertsen, Henriette and Rydgren, Knut and Auestad, Inger},
-  year = {2012},
-  volume = {Bachelor i},
-  file = {/home/julien/Documents/ZoteroLibrary/Gjengedal et al_2012_Landskapsendringer som følge av planting og spredning av sitkagran.pdf},
-  keywords = {management,remote sensing},
-  school = {H\o gskulen i Sogn og Fjordane}
-}
-
 @article{gomezMaintainingCloseCanopy2019,
   title = {Maintaining Close Canopy Cover Prevents the Invasion of {{Pinus}} Radiata: {{Basic}} Ecology to Manage Native Forest Invasibility},
   shorttitle = {Maintaining Close Canopy Cover Prevents the Invasion of {{Pinus}} Radiata},
@@ -669,7 +653,6 @@
 }
 
 @article{haakenstadNORA10EIRevisedRegional,
-  ids = {haakenstadNORA10EIRevisedRegional},
   title = {{{NORA10EI}}: {{A}} Revised Regional Atmosphere-Wave Hindcast for the {{North Sea}}, the {{Norwegian Sea}} and the {{Barents Sea}}},
   shorttitle = {{{NORA10EI}}},
   author = {Haakenstad, Hilde and Breivik, {\O}yvind and Reistad, Magnar and Aarnes, Ole J.},
@@ -703,6 +686,7 @@
   issn = {1466-8238},
   doi = {10.1111/geb.13164},
   abstract = {Background Although a standard taxonomy of organisms has existed for nearly 300 years, no consensus has yet been reached on principles for systematization of ecological diversity (i.e., the co-ordinated variation of abiotic and biotic components of natural diversity). In a rapidly changing world, where nature is under constant pressure, standardized terms and methods for characterization of ecological diversity are urgently needed (e.g., to enhance precision and credibility of global change assessments). Aim The aim is to present the EcoSyst framework, a set of general principles and methods for systematization of natural diversity that simultaneously addresses biotic and abiotic variation, and to discuss perspectives opened by this framework. Innovation EcoSyst provides a framework for systematizing natural variation in a consistent manner across different levels of organization. At each ecodiversity level, EcoSyst principles can be used to establish: (a) an extensive attribute system with descriptive variables that cover all relevant sources of variation; (b) a hierarchical-type system; and (c) a set of guidelines for land-cover mapping that is consistent across spatial scales. EcoSyst type systems can be conceptualized as multidimensional models, by which a key characteristic (the response) is related to variation in one or more key sources of variation (predictors). EcoSyst type hierarchies are developed by a gradient-based iterative procedure, by which the ``ecodiversity distance'' (i.e., the extent to which the key characteristic differs between adjacent candidate types) is standardized and the ecological processes behind observed patterns are explicitly taken into account. Application We present ``Nature in Norway'' (NiN), an implementation of the EcoSyst framework for Norway for the ecosystem and landscape levels of ecodiversity. Examples of applications to research and management are given. Conclusion The EcoSyst framework provides a theoretical platform, principles and methods that can complement and enhance initiatives towards a global-scale systematics of ecodiversity.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/geb.13164},
   copyright = {\textcopyright{} 2020 The Authors. Global Ecology and Biogeography published by John Wiley \& Sons Ltd},
   file = {/home/julien/Documents/ZoteroLibrary/Halvorsen et al__Towards a systematics of ecodiversity.pdf},
   journal = {Global Ecology and Biogeography},
@@ -776,6 +760,7 @@
   issn = {1939-9170},
   doi = {10.1890/05-0427},
   abstract = {Models and observational studies have sought patterns of predictability for invasion of natural areas by nonindigenous species, but with limited success. In a field experiment using forest understory plants, we jointly manipulated three hypothesized determinants of biological invasion outcome: resident diversity, physical disturbance and abiotic conditions, and propagule pressure. The foremost constraints on net habitat invasibility were the number of propagules that arrived at a site and naturally varying resident plant density. The physical environment (flooding regime) and the number of established resident species had negligible impact on habitat invasibility as compared to propagule pressure, despite manipulations that forced a significant reduction in resident richness, and a gradient in flooding from no flooding to annual flooding. This is the first experimental study to demonstrate the primacy of propagule pressure as a determinant of habitat invasibility in comparison with other candidate controlling factors.},
+  annotation = {\_eprint: https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.1890/05-0427},
   copyright = {\textcopyright{} 2005 by the Ecological Society of America},
   file = {/home/julien/Documents/ZoteroLibrary/Holle_Simberloff_2005_Ecological Resistance to Biological Invasion Overwhelmed by Propagule Pressure.pdf},
   journal = {Ecology},
@@ -796,6 +781,24 @@
   abstract = {A numerical model (TurbSeed) is described which calculates explicitly the dispersal of plant seeds by wind, especially the fraction of seeds, which are transported more than 100m starting at the inflorescence. Such rare events are called here long-distance dispersal. The framework of TurbSeed includes three main modules:(1)A turbulence model (TM) for a specified location and time period using meteorological parameters from publicly available mesoscale weather models or simulated climate data.(2)A Lagrangian model (LM) which calculates the seed transport in the turbulent boundary layer and(3)A module which considers the effect of weather conditions on release of seeds (RS). In this approach the turbulent field is prescribed by a coarse wind field derived from the mesoscale climate simulations superimposed by a random velocity component. Similar approaches are known as Eulerian\textendash Lagrangian approaches. The main difference in this new approach (TM) lies in the construction of the turbulent structure of the wind field. The introduction of such a random velocity component uses the Monin\textendash Obukhov similarity theory. An inverse random phase Fast-Fourier-Transformation reconstructs the time structure of turbulence using a parameterized power spectrum of turbulence which is accepted as standard in micro meteorology. In the LM module Monte-Carlo-Simulations for numerous trajectories are used to incorporate the effects of turbulence. The RS module takes into account various conditions of release of plant seeds, such as the date of maturity of the seeds and the effect of wind speed on the release of seeds. This model can be driven not only with data from observed weather conditions, but also with output of mesoscale climate scenarios. Thus, TurbSeed can study the effect of climate change on wind dispersal of seeds.},
   file = {/home/julien/Documents/ZoteroLibrary/Horn et al_2012_TurbSeed—A model for wind dispersal of seeds in turbulent currents based on.pdf},
   journal = {Ecological Modelling}
+}
+
+@article{horvathDistributionModellingVegetation2019,
+  ids = {horvathDistributionModellingVegetation},
+  title = {Distribution Modelling of Vegetation Types Based on Area Frame Survey Data},
+  author = {Horvath, Peter and Halvorsen, Rune and Stordal, Frode and Tallaksen, Lena Merete and Tang, Hui and Bryn, Anders},
+  year = {2019},
+  volume = {22},
+  pages = {547--560},
+  issn = {1654-109X},
+  doi = {10.1111/avsc.12451},
+  abstract = {Aim Many countries lack informative, high-resolution, wall-to-wall vegetation or land cover maps. Such maps are useful for land use and nature management, and for input to regional climate and hydrological models. Land cover maps based on remote sensing data typically lack the required ecological information, whereas traditional field-based mapping is too expensive to be carried out over large areas. In this study, we therefore explore the extent to which distribution modelling (DM) methods are useful for predicting the current distribution of vegetation types (VT) on a national scale. Location Mainland Norway, covering ca. 324,000 km2. Methods We used presence/absence data for 31 different VTs, mapped wall-to-wall in an area frame survey with 1081 rectangular plots of 0.9 km2. Distribution models for each VT were obtained by logistic generalised linear modelling, using stepwise forward selection with an F-ratio test. A total of 116 explanatory variables, recorded in 100 m \texttimes{} 100 m grid cells, were used. The 31 models were evaluated by applying the AUC criterion to an independent evaluation dataset. Results Twenty-one of the 31 models had AUC values higher than 0.8. The highest AUC value (0.989) was obtained for Poor/rich broadleaf deciduous forest, whereas the lowest AUC (0.671) was obtained for Lichen and heather spruce forest. Overall, we found that rare VTs are predicted better than common ones, and coastal VTs are predicted better than inland ones. Conclusions Our study establishes DM as a viable tool for spatial prediction of aggregated species-based entities such as VTs on a regional scale and at a fine (100 m) spatial resolution, provided relevant predictor variables are available. We discuss the potential uses of distribution models in utilizing large-scale international vegetation surveys. We also argue that predictions from such models may improve parameterisation of vegetation distribution in earth system models.},
+  copyright = {\textcopyright{} 2019 The Authors. Applied Vegetation Science published by John Wiley \& Sons Ltd on behalf of International Association for Vegetation Science},
+  file = {/home/julien/Documents/ZoteroLibrary/Horvath et al_2019_Distribution modelling of vegetation types based on area frame survey data.pdf},
+  journal = {Applied Vegetation Science},
+  keywords = {SDM,To read},
+  language = {en},
+  number = {4}
 }
 
 @article{jacobsonNaturalRegenerationLodgepole2020,
@@ -844,7 +847,6 @@
 }
 
 @article{kaliniewiczPhysicalPropertiesSeeds2018,
-  ids = {kaliniewiczPhysicalPropertiesSeeds2018},
   title = {Physical {{Properties}} of {{Seeds}} of {{Eleven Spruce Species}}},
   author = {Kaliniewicz, Zdzis{\l}aw and {\.Z}uk, Zbigniew and Kusi{\'n}ska, El{\.z}bieta},
   year = {2018},
@@ -994,6 +996,7 @@
   issn = {1939-5582},
   doi = {10.1002/eap.1429},
   abstract = {The severity and spatial extent of bark-beetle outbreaks substantially increased in recent decades worldwide. The ongoing controversy about natural forest recovery after these outbreaks highlights the need for individual-based long-term studies, which disentangle processes driving forest regeneration. However, such studies have been lacking. To fill this gap, we followed the fates of 2,552 individual seedlings for 12 years after a large-scale bark-beetle outbreak that caused complete canopy dieback in mountain Norway spruce (Picea abies) forests in southeast Germany. We explore the contribution of advance, disturbance-related, and post-disturbance regeneration to forest recovery. Most seedlings originated directly within the three-year dieback of canopy trees induced by bark-beetle outbreak. After complete canopy dieback, the establishment of new seedlings was minimal. Surprisingly, advance regeneration formed only a minor part of all regeneration. However, because it had the highest survival rate, its importance increased over time. The most important factor influencing the survival of seedlings after disturbance was their height. Survival was further modified by microsite: seedlings established on dead wood survived best, whereas almost all seedlings surrounded by graminoids died. For 5 cm tall seedlings, annual mortality ranged from 20 to 50\% according to the rooting microsite. However, for seedlings taller than 50 cm, annual mortality was below 5\% at all microsites. While microsite modified seedling mortality, it did not affect seedling height growth. A model of regeneration dynamics based on short-term observations accurately predicts regeneration height growth, but substantially underestimates mortality rate, thus predicting more surviving seedlings than were observed. We found that P. abies forests were able to regenerate naturally even after severe bark-beetle outbreaks owing to advance and particularly disturbance-related regeneration. This, together with microsite-specific mortality, yields structurally and spatially diverse forests. Our study thus highlights the so far unrecognized importance of disturbance-related regeneration for stand recovery after bark-beetle outbreaks.},
+  annotation = {\_eprint: https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.1002/eap.1429},
   copyright = {\textcopyright{} 2016 by the Ecological Society of America},
   file = {/home/julien/Documents/ZoteroLibrary/Macek et al_2017_Life and death of Picea abies after bark-beetle outbreak.pdf},
   journal = {Ecological Applications},
@@ -1140,6 +1143,7 @@
   issn = {2045-7758},
   doi = {10.1002/ece3.1877},
   abstract = {Understanding biological invasions patterns and mechanisms is highly needed for forecasting and managing these processes and their negative impacts. At small scales, ecological processes driving plant invasions are expected to produce a spatially explicit pattern driven by propagule pressure and local ground heterogeneity. Our aim was to determine the interplay between the intensity of seed rain, using distance to a mature plantation as a proxy, and microsite heterogeneity in the spreading of Pinus contorta in the treeless Patagonian steppe. Three one-hectare plots were located under different degrees of P. contorta invasion (Coyhaique Alto, 45\textdegree{} 30{${'}$}S and 71\textdegree{} 42{${'}$}W). We fitted three types of inhomogeneous Poisson models to each pine plot in an attempt for describing the observed pattern as accurately as possible: the ``dispersal'' models, ``local ground heterogeneity'' models, and ``combined'' models, using both types of covariates. To include the temporal axis in the invasion process, we analyzed both the pattern of young and old recruits and also of all recruits together. As hypothesized, the spatial patterns of recruited pines showed coarse scale heterogeneity. Early pine invasion spatial patterns in our Patagonian steppe site is not different from expectations of inhomogeneous Poisson processes taking into consideration a linear and negative dependency of pine recruit intensity on the distance to afforestations. Models including ground-cover predictors were able to describe the point pattern process only in a couple of cases but never better than dispersal models. This finding concurs with the idea that early invasions depend more on seed pressure than on the biotic and abiotic relationships seed and seedlings establish at the microsite scale. Our results show that without a timely and active management, P. contorta will invade the Patagonian steppe independently of the local ground-cover conditions.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.1877},
   copyright = {\textcopyright{} 2016 The Authors. Ecology and Evolution  published by John Wiley \& Sons Ltd.},
   file = {/home/julien/Documents/ZoteroLibrary/Pauchard et al_2016_Pine invasions in treeless environments.pdf},
   journal = {Ecology and Evolution},
@@ -1253,16 +1257,6 @@
   journal = {Journal of Biogeography},
   keywords = {invasion},
   number = {5}
-}
-
-@phdthesis{richterSpredningAvSitkagran2015,
-  title = {Spredning Av Sitkagran {{Picea}} Sitchensis P\aa{} {{Stadlandet}}, {{Selje}} Kommune},
-  author = {Richter, L M},
-  year = {2015},
-  volume = {Bachelor},
-  file = {/home/julien/Documents/ZoteroLibrary/Richter_2015_Spredning av sitkagran Picea sitchensis på Stadlandet, Selje kommune.pdf},
-  keywords = {management,sitka spruce},
-  school = {H\o gskolen i Nord- Tr\o ndelag}
 }
 
 @article{rougetInferringProcessPattern2003,
@@ -1412,6 +1406,7 @@
   issn = {1466-8238},
   doi = {10.1111/geb.12391},
   abstract = {Aim To determine biotic and abiotic controls on pine invasion globally within six ecoregions that include both introduced and native ranges. Locations R\'io Negro province, Argentina; Ays\'en and Araucan\'ia regions, Chile; South Island (two ecoregions), New Zealand; Greater Yellowstone ecosystem, USA. Methods We quantified tree abundance and size across invasion fronts of the widespread invasive tree species Pinus contorta at each of the nine sites, encompassing both the native and introduced range. We also determined the relative importance of propagule pressure, abiotic characteristics and biotic factors for invasion success. Finally, key plant population metrics such as individual tree growth rates and reproductive effort were compared between native and introduced ranges. Results Pinus contorta density decreased with increasing distance from source population in all cases, but the importance and shape of this relationship differed among sites due, primarily to biotic factors. For example, areas dominated by native southern beech forest (Fuscospora cliffortioides or Nothofagus spp.) were not invaded, and this biotic resistance was not overcome by high propagule pressure. In contrast, shrublands were more highly invaded than grasslands, contradicting previous generalizations about pine invasions. Pinus contorta growth was faster, age to maturity was earlier and reproductive effort was higher in the introduced ranges compared with the native range, suggesting a demographic shift towards more rapid population growth in introduced regions. Climatic differences between the ranges may explain, at least in part, the observed pattern. Main conclusions We demonstrate that although biological invasions are driven by propagule pressure across different ecoregions, these processes interact strongly with biotic factors. Intriguingly, our results suggest that propagule pressure may become less important than biotic interactions as invasions proceed. Multi-region studies including both the native and introduced ranges provide unparalleled opportunities for understanding how these interactions change among regions as invasions proceed.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/geb.12391},
   copyright = {\textcopyright{} 2015 John Wiley \& Sons Ltd},
   file = {/home/julien/Documents/ZoteroLibrary/Taylor et al_2016_Drivers of plant invasion vary globally.pdf},
   isbn = {1466822X},
@@ -1572,6 +1567,24 @@
   number = {7}
 }
 
+@article{volleringBunchingBackgroundBetters2019,
+  ids = {vollering2019},
+  title = {Bunching up the Background Betters Bias in Species Distribution Models},
+  author = {Vollering, Julien and Halvorsen, Rune and Auestad, Inger and Rydgren, Knut},
+  year = {2019},
+  volume = {42},
+  pages = {1717--1727},
+  issn = {1600-0587},
+  doi = {10.1111/ecog.04503},
+  abstract = {Sets of presence records used to model species' distributions typically consist of observations collected opportunistically rather than systematically. As a result, sampling probability is geographically uneven, which may confound the model's characterization of the species' distribution. Modelers frequently address sampling bias by manipulating training data: either subsampling presence data or creating a similar spatial bias in non-presence background data. We tested a new method, which we call `background thickening', in the latter category. Background thickening entails concentrating background locations around presence locations in proportion to presence location density. We compared background thickening to two established sampling bias correction methods \textendash{} target group background selection and presence thinning \textendash{} using simulated data and data from a case study. In the case study, background thickening and presence thinning performed similarly well, both producing better model discrimination than target group background selection, and better model calibration than models without correction. In the simulation, background thickening performed better than presence thinning when the number of simulated presence locations was low, and vice versa. We discuss drawbacks to target group background selection, why background thickening and presence thinning are conservative but robust sampling bias correction methods, and why background thickening is better than presence thinning for small sample sizes. Particularly, background thickening is advantageous for treating sampling bias when data are scarce because it avoids discarding presence records.},
+  copyright = {\textcopyright{} 2019 The Authors},
+  file = {/home/julien/Documents/ZoteroLibrary/Vollering et al_2019_Bunching up the background betters bias in species distribution models.pdf;/home/julien/Zotero/storage/K5ZWVGXD/ecog.html},
+  journal = {Ecography},
+  keywords = {SDM},
+  language = {en},
+  number = {10}
+}
+
 @article{wallRelativeContributionsWind2008,
   title = {On the {{Relative Contributions}} of {{Wind Vs}}. {{Animals}} to {{Seed Dispersal}} of {{Four Sierra Nevada Pines}}},
   author = {Wall, Stephen B. Vander},
@@ -1661,6 +1674,7 @@
   issn = {1600-0706},
   doi = {10.1111/j.1600-0706.2012.00254.x},
   abstract = {Most species introductions are not expected to result in invasion, and species that are invasive in one area are frequently not invasive in others. However, cases of introduced organisms that failed to invade are reported in many instances as anecdotes or are simply ignored. In this analysis, we aimed to find common characteristics between non-invasive populations of known invasive species and evaluated how the study of failed invasions can contribute to research on biological invasions. We found intraspecific variation in invasion success and several recurring explanations for why non-native species fail to invade; these included low propagule pressure, abiotic resistance, biotic resistance, genetic constraints and mutualist release. Furthermore, we identified key research topics where ignoring failed invasions could produce misleading results; these include studies on historical factors associated with invasions, distribution models of invasive species, the effect of species traits on invasiveness, genetic effects, biotic resistance and habitat invasibility. In conclusion, we found failed invasions can provide fundamental information on the relative importance of factors determining invasions and might be a key component of several research topics. Therefore, our analysis suggests that more specific and detailed studies on invasion failures are necessary.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1600-0706.2012.00254.x},
   copyright = {\textcopyright{} 2013 The Authors},
   file = {/home/julien/Documents/ZoteroLibrary/Zenni_Nuñez_2013_The elephant in the room.pdf},
   journal = {Oikos},
